--- a/update.html
+++ b/update.html
@@ -87,9 +87,9 @@
     <div class="container">
         <h1>Booth No</h1>
         <form action="" method="post">
-            <label for="votersno">Voter's Number:</label>
+            <label for="votersno" >Voter's Number:</label>
             <input type="hidden" name="boothno" value="<?php echo $_GET['boothno']; ?>">
-            <input type="number" id="votersno" name="votersno" required><br><br>
+            <input type="number" id="votersno" autofocus="autofocus" name="votersno" required><br><br>
 
             <label for="status">Status:</label>
             <select id="status" name="status">
