changed the way the index acts on iphone and also made a few css changes, closed the sql two connections mistake

--- a/update.html
+++ b/update.html
@@ -88,7 +88,7 @@
         <h1>Booth No</h1>
         <form action="" method="post">
             <label for="votersno" >Voter's Number:</label>
-            <input type="hidden" name="boothno" value="<?php echo $_GET['boothno']; ?>">
+            <input type="hidden" name="boothno" value="<?php echo $boothNumber; ?>">
             <input type="number" id="votersno" autofocus="autofocus" name="votersno" required><br><br>
 
             <label for="status">Status:</label>
