--- a/Master_App/dead/update.html
+++ b/Master_App/dead/update.html
@@ -85,7 +85,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Booth No</h1>
+        <h1>Booth No: <?php echo $boothNumber; ?></h1>
         <form action="" method="post">
             <label for="votersno" >Voter's Number:</label>
             <input type="hidden" name="boothno" value="<?php echo $boothNumber; ?>">
